fix letter spacing

--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -853,3 +853,12 @@ padding: 0;
 
  }
 
+
+
+ .riquadro-giallo{
+  opacity: 0;
+ }
+
+ .riquadro-giallo-show{
+  transition: all 1.8s ease-in-out;
+ }
