--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,7 +252,7 @@ body{
     color: var(--color1);
     font-size: 2.5rem;
     z-index: 100;
-    letter-spacing: 10px;
+    letter-spacing: 3px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 600;
 
@@ -270,7 +270,7 @@ body{
     color: var(--color1);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.1rem;
-    letter-spacing: 5px;
+    letter-spacing: 6.5px;
     text-align: center;
     z-index: 100;
     font-weight: 200;
